# leah-contract-review-evaluation

./: .gitignore  CONTINUE_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml  requirements.txt
.claude/: CHANGELOG.md  CLAUDE.md
.claude/agents/: test-generator.md
.serena/: project.yml
baseline_comparison/: __init__.py  config.py  contracts.py  evaluator.py  llm_clients.py  report.py  requirements.txt  run_comparison.py
baseline_comparison/reports/: comparison_report.md  comparison_summary.json
docs/: evaluation_integrity.md  ground_truth_principles.md  learning-log.md  sales_evaluation_methodology.md  scoring_methodology.md
docs/modes/: freeform.md  freeform_stacking.md  guidelines.md  rules.md  rules_stacking.md
framework/: __init__.py  cli.py  config_loader.py  pipeline.py
framework/config/: freeform.json  freeform_stacking.json  guidelines.json  rules.json  rules_stacking.json
framework/schemas/: canonical_json_schema.json  mode_config_schema.json
framework/scoring/: __init__.py  classification.py  concepts.py  detection.py  f1.py  normalisation.py  (+5 more)
notebooks/: 01_evaluation_pipeline.ipynb
prompts/: freeform.md  freeform_stacking.md  guidelines.md  rules.md  rules_stacking.md
tests/: __init__.py  test_classification.py  test_concepts.py  test_pipeline_e2e.py  test_polarity.py  test_reasoning.py  test_sales_metrics.py  test_validators_base.py  test_validators_guidelines.py  test_validators_pre_aggregate.py  test_validators_pre_eval.py  test_validators_pre_workbook.py  test_validators_rules.py  test_validators_stacking.py
(+446 files in other folders)
